microservices/app/ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
spec:
  rules:
  - host: app.project.space
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: ui
            port:
              number: 8000
